--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,6 @@
         "hhvm/hhast": "^4.0",
         "hhvm/hacktest": "^2.0",
         "facebook/fbexpect": "^2.1.2",
-        "hhvm/hhvm-autoload": "^2.0"
+        "hhvm/hhvm-autoload": "^2.0|^3.0"
     }
 }
