--- a/.hhconfig
+++ b/.hhconfig
@@ -4,3 +4,5 @@ disallow_stringish_magic=true
 user_attributes=
 disable_unsafe_expr=true
 disable_unsafe_block=true
+allowed_decl_fixme_codes=2053,4045,4047
+allowed_fixme_codes_strict=2011,2049,2050,2053,4027,4045,4047,4104,4106,4108,4110,4128,4135,4188,4240,4323
