--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,7 @@
       }
     },
     "require": {
-        "hhvm": "^4.102",
-        "hhvm/hsl": "^4.0"
+        "hhvm": "^4.128"
     },
     "require-dev": {
         "hhvm/hhast": "^4.0",
